# MSPA

./: CMakeLists.txt  LICENSE  README.md  compile_MSPA.sh  run_Email_1e2_3.sh  run_Email_advDP.sh  run_Email_apx_cand.sh  run_NY_1e2_3.sh  run_NY_advDP.sh  run_NY_apx_cand.sh
TKDE_MSPA_DATA/queryfile/: Email_10001.Q  Email_1001.Q  Email_101.Q  Email_11.Q  Email_6.Q  Email_7.Q  Email_8.Q  Email_9.Q  NY-d_10001.Q  NY-d_1001.Q  NY-d_101.Q  NY-d_11.Q  NY-d_6.Q  NY-d_7.Q  NY-d_8.Q  NY-d_9.Q  example.Q
script/Email/: BatchRename.sh  run_Email_1e2_3_cand.sh  run_Email_1e2_3_fs.sh  run_Email_advDP.sh  run_Email_cand.sh  run_Email_split_bfs.sh  run_Email_split_dfs.sh
script/NY/: BatchRename.sh  run_NY_1e2_3_cand.sh  run_NY_1e2_3_fs.sh  run_NY_advDP.sh  run_NY_cand.sh  run_NY_split_bfs.sh  run_NY_split_dfs.sh
src/: H2H.h  MSPA.cpp  MSPAUtilities.h  MSPAUtilities_new.h  MSPA_new.cpp  appx.h  appx_new.h
tools/: CMakeLists.txt  Tree-Decomposition.index.cpp  construct_index_main.cc  pruned_landmark_labeling.h  randGen.cpp  run_compile_rand_gen.sh  run_complie_construct_index.sh  run_gen_rand_ALL.sh  settings.json
